# bevy-jam-1

./: .notes.md  Cargo.toml  README.md  bevy-jam-1.js  bevy-jam-1_bg.wasm.d.ts  idiomatic.md  index.html  justfile  stars-io.js
.cargo/: config.toml
docs/: LICENSE-APACHE
src/: ai.rs  camera.rs  control.rs  debug.rs  game_ui.rs  main.rs  players.rs  selection.rs  selection_ui.rs  ship.rs  star_generation.rs  top_down_camera.rs
