[package]
authors = ["Gajo Petrovic <gajopetrovic@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bevy-jam-1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.7.0"}
bevy-inspector-egui = "0.11.0"
bevy-web-resizer = "2.0.0"
bevy_prototype_lyon = "0.5.0"
ctrl_macros = "0.1.0"
rand = "0.8.3"
rand_distr = "0.4.3"
