[package]
authors = ["Gajo Petrovic <gajopetrovic@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bevy-jam-1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
# bevy-inspector-egui = "0.18"
bevy-web-resizer = "4.0"
bevy_prototype_lyon = "0.9"
ctrl_macros = "0.1"
rand = "0.8"
rand_distr = "0.4"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
